// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart checkout() should return an object with the items when summary is called 1`] = `
Object {
  "formatted": "R$ 196.392,00",
  "items": Array [
    Object {
      "product": Object {
        "price": 35388,
        "title": "Addidas running shoes - men",
      },
      "quantity": 2,
    },
    Object {
      "product": Object {
        "price": 41872,
        "title": "Addidas running shoes - women",
      },
      "quantity": 3,
    },
  ],
  "total": 196392,
}
`;

exports[`Cart checkout() should return an object with the total and the list of items 1`] = `
Object {
  "items": Array [
    Object {
      "product": Object {
        "price": 35388,
        "title": "Addidas running shoes - men",
      },
      "quantity": 2,
    },
    Object {
      "product": Object {
        "price": 41872,
        "title": "Addidas running shoes - women",
      },
      "quantity": 3,
    },
  ],
  "total": 196392,
}
`;
